route_table_pub.tf
resource "aws_route_table" "public" { 
  vpc_id = "${aws_vpc.vault.id}" 
  tags = "${var.tags}"
  route { 
    cidr_block = "0.0.0.0/0" 
    gateway_id = "${aws_internet_gateway.vault.id}" 
    
} 
 
} 

resource "aws_route_table_association" "public1" { 
  subnet_id = "${aws_subnet.public1.id}" 
  route_table_id = "${aws_route_table.public.id}" 
} 

resource "aws_route_table_association" "public2" { 
  subnet_id = "${aws_subnet.public2.id}" 
  route_table_id = "${aws_route_table.public.id}" 
} 

resource "aws_route_table_association" "public3" { 
  subnet_id = "${aws_subnet.public3.id}" 
  route_table_id = "${aws_route_table.public.id}" 
}
